@@ -47,7 +47,7 @@ class OrderControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldFindOrderById() throws Exception {
-        Order order = orderList.get(0);
+        Order order = orderList.getFirst();
         Long orderId = order.getId();
 
         this.mockMvc
@@ -93,7 +93,7 @@ class OrderControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldUpdateOrder() throws Exception {
-        Order order = orderList.get(0);
+        Order order = orderList.getFirst();
         order.setText("Updated Order");
 
         this.mockMvc
@@ -107,7 +107,7 @@ class OrderControllerIT extends AbstractIntegrationTest {
 
     @Test
     void shouldDeleteOrder() throws Exception {
-        Order order = orderList.get(0);
+        Order order = orderList.getFirst();
 
         this.mockMvc
                 .perform(delete("/api/orders/{id}", order.getId()))
